# dns-manager

./: .gitignore  configure.ac
examples/: Alignment1.py  AutoShortcut1.py  AutoShortcut2.py  BackgroundPixmap.py  BarGraph1.py  BarGraph2.py  BarGraph3.py  Beep.py  BusyIndicator.py  ButtonBox1.py  ButtonBox2.py  ButtonBox3-relaxed.py  CheckBox1.py  CheckBox2.py  CheckBox3.py  CheckBox4.py  CheckBoxFrame1.py  CheckBoxFrame2.py  CheckBoxFrame3.py  CheckBoxFrame4.py  ComboBox-empty.py  ComboBox-icons.py  ComboBox-replace-items1.py  ComboBox-set-empty.py  ComboBox-setInputMaxLength.py  ComboBox1.py  ComboBox2.py  ComboBox3.py  ComboBox4.py  ComboBox5.py  ContextMenu.py  DateField1.py  Decorated.py  DefaultButtons1.py  DefaultButtons2.py  DefaultButtons3.py  DefaultSizeDialogs.py  DownloadProgress1.py  DownloadProgress2.py  DumbTab1.py  (+194 more)
src/: Makefile.am  libyui.py
src/clients/: dns-manager  dns-manager.py
src/include/: __init__.py  complex.py  creds.py  dialogs.py  ui.py  wizards.py
src/include/dns-manager/: complex.py  dialogs.py  wizards.py
